<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="AprilTag Processing"
        android:key="pref_cat_processing">

        <ListPreference
            android:defaultValue="8"
            android:entries="@array/pref_decimation_list_titles"
            android:entryValues="@array/pref_decimation_list_values"
            android:key="decimation_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_decimation"/>

        <EditTextPreference
            android:defaultValue="@string/pref_default_sigma"
            android:inputType="numberDecimal"
            android:key="sigma_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_sigma" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_nthreads"
            android:inputType="number"
            android:key="nthreads_value"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_nthreads"/>

        <ListPreference
            android:defaultValue="tag36h11"
            android:entries="@array/pref_tag_family_list_titles"
            android:entryValues="@array/pref_tag_family_list_values"
            android:key="tag_family_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_tag_family" />
    </PreferenceCategory>

</PreferenceScreen>
